
wxMSW:

- wxListCtrl::Find() parameter meaning changed, see docs for details
  (starting item is now included in the search, use 0 to search from the
   beginning)

OTHER CHANGES
-------------

2.2.10
------

Unix:

- fixed configure bug which prevented it from finding anything with some
  compiler versions

wxHTML:

- fixed wxHtmlHelpController's cache files handling on big endian machines

2.2.9
-----

All:

- several memory leaks fixed, a few speed optimizations were done
- using wxURL now enforces linking HTTP and FTP protocols in

Unix:

- configure changes: the system libraries are now used if found, fixes for
  configuring under Solaris and Mac OS X, better support for 64 bit
  architectures (including IA64)

- call dlopen() with RTLD_GLOBAL flag

- wxBase:

- fixed bugs in wxString::rfind() and resize()
- fixed wxStrtok()
- miscellaneous fixes in wxDateTime
- bug fixes in wxODBC

wxMSW:

- fixed wxChoice size calculations
- fixed bad resource leak in wxListBox
- fixed crash in wxSetFocusToChild()
- fixed toolbar buttons drawing under Windows 2000
- significant speed optimizations in wxRegConfig
- better handling of accelerators
- wxComboBox can now process enter key and sends TEXT_UPDATED more often
- fixed crashes with big XPM files
- compilation fixes for Mingw32/JPEG code

wxGTK:

- fix for non-US keyboards
- improvents for 8bpp displays
- various wxComboBox fixes
- corrected radio button event sending
- fixed slider value rounding, wxGA_VERTICAL style is now supported
- fixed tree control invalid pointer after drag bug

2.2.8
-----

There was no official wxWindows 2.2.8 release.

2.2.7
-----

All:

- significant speed optimizations in several classes
- wxFont::operator==() fixed

Unix:

- support for OpenBSD added to configure (Dennis Taylor)

wxBase:

- wxLongLong compilation fixed for SGI native compiler
- wxString::FormatV() fatal bug fixed

wxMSW:

- wxExecute DDE bug corrected: no spurious error messages any more